# nx-mvs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  default.nix  findability.py  pyproject.toml  shell.nix
data/: graph-alt.dot  graph.dot
nix/: package.nix  shell.nix
nix/tamal/: .ignore  lock.json  manifest.kdl
src/cpp/: bindings.cpp
src/mvs/: __init__.py  _api.py  _native.pyi
tests/: findability.py  test_api.py  test_findability.py  test_sampling.py
