[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.9"]
build-backend = "scikit_build_core.build"

[project]
name = "nx_mvs"
version = "0.1.0"
description = "NetworkX bindings for the mvs directed convex subgraph solver"
requires-python = ">=3.11"
dependencies = ["networkx>=3.5"]

[tool.scikit-build]
wheel.packages = ["src/mvs"]
editable.mode = "inplace"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
pythonVersion = "3.13"
